2005-10-17  Jonathan Wakely  <redi@gcc.gnu.org>

	PR libstdc++/24244
	* include/tr1/boost_shared_ptr.h (_Sp_counted_base::_Sp_counted_base()):
	When __GTHREAD_MUTEX_INIT is defined, initialize the mutex.

2005-10-15  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1/functional: Add missing #pragma GCC system_header.

2005-10-14  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1/hashtable (hashtable::m_erase): Rename to erase_node.
	(hashtable::erase(iterator), erase(const_iterator)): Adjust.

2005-10-13  Richard Earnshaw  <richard.earnsahw@arm.com>

	PR libstdc++/23926
	* acinclude.m4 (port_specific_symbol_files): More symbol versioning
	fixes.
	* configure: Regenerate.

2005-10-13  Hans-Peter Nilsson  <hp@axis.com>

	* testsuite/lib/libstdc++.exp (libstdc++_init): Require
	native testing before setting v3-sharedlib to 1.

2005-10-12  Joe Buck  <Joe.Buck@synopsys.com>

	* docs/html/27_io/howto.html: Use reference to ifstream when
	including iosfwd.

2005-10-11  Andrew Pinski  <pinskia@physics.uc.edu>

	PR libstdc++/23926
	* acinclude.m4 (GLIBCXX_ENABLE_SYMVERS): Fix typo in check
	for GNU LD.
	* configure: Regenerate.

2005-10-10  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.ac (libtool_VERSION): To 6:7:0.
	* configure: Regenerate.
	* testsuite/testsuite_abi.cc (check_version): Add GLIBCXX_3.4.7.
	* config/linker-map.gnu: Export locale::_Impl::_M_install_cache.

2005-10-10  Ian Lance Taylor  <ian@airs.com>

	PR libstdc++/13583
	* include/bits/locale_classes.h (locale::_Impl::_M_install_cache):
	Move out of line.
	* src/locale.cc: Define here, add mutex.

2005-10-09  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/24061 (issue 6.19)
	* include/tr1/hashtable (struct node_const_iterator, struct
	hashtable_const_iterator): New, add const variants to enable separate
	overloadings for iterator and const_iterator in unordered_set and
	unordered_multiset (as required by issue 6.19).
	(class hashtable): Change the mutable_iterators template parameter