@@ -73,7 +73,7 @@ namespace __gnu_cxx
       typedef std::reverse_iterator<const_iterator>	const_reverse_iterator;
       typedef std::reverse_iterator<iterator>		    reverse_iterator;
 
-      // Data Members (public):
+      // Data Member (public):
       // NB: This is an unsigned type, and thus represents the maximum
       // size that the allocator can hold.
       ///  Value returned by various member functions when they fail.
@@ -346,7 +346,7 @@ namespace __gnu_cxx
       /// Returns the size() of the largest possible %string.
       size_type
       max_size() const
-      { return __vstring_base::_S_max_size; }
+      { return this->_M_max_size(); }
 
       /**
        *  @brief  Resizes the %string to the specified number of characters.
